skills section mobile version bug fix

--- a/src/styless/_portfolio.scss
+++ b/src/styless/_portfolio.scss
@@ -1,6 +1,6 @@
 $height: 33vw;
 $width: 68.4288vw;
-$borderRadius: 6px;
+$borderRadius: 10px;
 
 
 #imacon{
@@ -152,7 +152,7 @@ $borderRadius: 6px;
             height: 40vh;
             width: 97vw;
             &:hover{
-                opacity: 0.5;
+                opacity: 1;
             }
         }
     }
