--- a/src/styless/home.scss
+++ b/src/styless/home.scss
@@ -217,8 +217,8 @@ body{
     button{
       width: 100px;
       margin-left: 0vw;
-      background-color: #30b069;
-      color: black;
+      background-color: black;
+      color: white;
     }
 
     
